Add REST, CORS, Swagger, MySQL, and env support
Integrated Django REST Framework, CORS headers, and drf_yasg for API documentation. Switched database backend to MySQL with environment variable management using django-environ. Updated middleware, installed apps, and requirements.txt accordingly, and added Swagger UI route and listings app URL inclusion.

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,9 @@ celery>=5.3
 # Required for Celery to communicate with RabbitMQ (as a broker)
 # Note: You need RabbitMQ running separately (not a Python package)
 amqp>=5.2
+
+# MySQL driver for Django
+mysqlclient>=2.2
+
+# For managing environment variables securely
+django-environ>=0.11
